--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>My Site!</title>
 </head>
 <body>
-	<h1>This is my site! Please move faster!</h1>
+	<h1>This is my site!</h1>
 </body>
 </html>
